# compilaechuta

./: .env.example  .gitignore  check_db.py
ai-agent/: .env.example  .gitignore  GUIA_BACKEND.md  README.md  README_DECISOES.md  README_DEMO.md  README_INTEGRATION.md  guia_integração.md  pyproject.toml  requirements.txt  test_out.txt  test_out_memory.txt
ai-agent/src/: agent.py  config.py  db.py  exceptions.py  guardrails.py  insight_generator.py  llm_client.py  schema.py  schema_descriptions.json  sql_generator.py
ai-agent/src/core/: config.py  exceptions.py
ai-agent/src/database/: schema.py  schema_descriptions.json
ai-agent/src/llm/: insight_generator.py  llm_client.py  sql_generator.py
ai-agent/src/prompts/: insight_system.txt  sql_correction_system.txt  sql_system.txt
ai-agent/src/security/: guardrails.py
ai-agent/src/vcommerce_ai_agent/: __init__.py  agent.py
ai-agent/tests/: smoke_test.py  smoke_test_config.py  smoke_test_guardrails.py  smoke_test_memory.py  test_guardrails.py  test_memory.py  test_schema.py  test_sql_generator.py
ai-agent/tests/integration/: backend_pipeline_probe.py  smoke_test.py  smoke_test_anonymization.py  smoke_test_chart_decision.py  smoke_test_config.py  smoke_test_db.py  smoke_test_guardrails.py  smoke_test_memory.py  smoke_test_sensitive_data_masking.py  smoke_test_suggestions.py  smoke_tests_config.py  test_integration_offline.py
ai-agent/tests/smoke/: backend_pipeline_probe.py  smoke_error_utils.py  smoke_test.py  smoke_test_anonymization.py  smoke_test_chart_decision.py  smoke_test_db.py  smoke_test_demo.py  smoke_test_guardrails.py  smoke_test_memory.py  smoke_test_sensitive_data_masking.py  smoke_test_suggestions.py  smoke_tests_config.py
ai-agent/tests/unit/: test_agent_response_contract.py  test_config.py  (+11 more)
(+252 files in other folders)
