[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vcommerce-ai-agent"
version = "0.1.0"
description = "Agente Text-to-SQL da V-Commerce CRM 360"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=0.0.19",
    "google-generativeai>=0.8.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "sqlglot>=26.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vcommerce_ai_agent = [
    "database/*.json",
    "llm/prompts/*.txt",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
