[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vcommerce-ai-agent"
version = "0.1.0"
description = "Agente Text-to-SQL da V-Commerce CRM 360"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai==0.4.3",
    "google-genai==2.3.0",
    "google-api-core==2.30.3",
    "httpx==0.28.1",
    "aiosqlite==0.22.1",
    "python-dotenv==1.0.1",
    "sqlglot==30.8.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vcommerce_ai_agent = [
    "database/*.json",
    "llm/prompts/*.txt",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: testes de integracao offline com banco SQLite e LLM mockado",
    "live_llm: testes que consomem API Gemini real (opt-in)",
]
